# renum

./: CMakeLists.txt  HISTORY.txt  README.md  README.txt  config.h  encoding.h  mstr.h  renum-tokens.h  renum.cpp  renum.h  tokens.h
testdata/: BADLINENO.BAS  DSKO_.BAS  EOF.BAS  GOSUB_RETURN.BAS  GOTO.BAS  IF_THEN_ELSE.BAS  INKEY_.BAS  LINE.BAS  LOC.BAS  ON_COM.BAS  OPEN.BAS  PANK98.BAS  POINT2.BAS  STR_.BAS
